--- a/static/css/typo.css
+++ b/static/css/typo.css
@@ -1,61 +1,68 @@
 @charset "utf-8";
 
 /* 防止用户自定义背景颜色对网页的影响，添加让用户可以自定义字体 */
-html {
+/*html {
   color: #333;
   background: #fff;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   text-rendering: optimizelegibility;
-}
+}*/
 
-/* 如果你的项目仅支持 IE9+ | Chrome | Firefox 等，推荐在 <html> 中添加 .borderbox 这个 class */
+/*!* 如果你的项目仅支持 IE9+ | Chrome | Firefox 等，推荐在 <html> 中添加 .borderbox 这个 class *!
 html.borderbox *, html.borderbox *:before, html.borderbox *:after {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-}
+}*/
 
 /* 内外边距通常让各个浏览器样式的表现位置不同 */
-body, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, textarea, p, blockquote, th, td, hr, button, article, aside, details, figcaption, figure, footer, header, menu, nav, section {
+/*body, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, textarea, p, blockquote, th, td, hr, button, article, aside, details, figcaption, figure, footer, header, menu, nav, section {
   margin: 0;
   padding: 0;
 }
 
-/* 重设 HTML5 标签, IE 需要在 js 中 createElement(TAG) */
+!* 重设 HTML5 标签, IE 需要在 js 中 createElement(TAG) *!
 article, aside, details, figcaption, figure, footer, header, menu, nav, section {
   display: block;
 }
 
-/* HTML5 媒体文件跟 img 保持一致 */
+!* HTML5 媒体文件跟 img 保持一致 *!
 audio, canvas, video {
   display: inline-block;
+}*/
+
+.typo{
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 2;
+  text-align: justify;
 }
 
 /* 要注意表单元素并不继承父级 font 的问题 */
-body, button, input, select, textarea {
+/*body*/.typo button,.typo input,.typo select,.typo textarea {
   font: 300 1em/1.8 PingFang SC, Lantinghei SC, Microsoft Yahei, Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans-serif;
 }
 
-button::-moz-focus-inner,
-input::-moz-focus-inner {
+.typo button::-moz-focus-inner,
+.typo input::-moz-focus-inner {
   padding: 0;
   border: 0;
 }
 
 /* 去掉各Table cell 的边距并让其边重合 */
-table {
+.typo table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
 /* 去除默认边框 */
-fieldset, img {
+.typo fieldset, .typo img {
   border: 0;
 }
 
 /* 块/段落引用 */
-blockquote {
+.typo blockquote {
   position: relative;
   color: #999;
   font-weight: 400;
@@ -65,87 +72,87 @@ blockquote {
 }
 
 @media only screen and ( max-width: 640px ) {
-  blockquote {
+  .typo blockquote {
     margin: 1em 0;
   }
 }
 
 /* Firefox 以外，元素没有下划线，需添加 */
-acronym, abbr {
+.typo acronym, .typo abbr {
   border-bottom: 1px dotted;
   font-variant: normal;
   text-decoration: none;
 }
 
 /* 添加鼠标问号，进一步确保应用的语义是正确的（要知道，交互他们也有洁癖，如果你不去掉，那得多花点口舌） */
-abbr {
+.typo abbr {
   cursor: help;
 }
 
 /* 一致的 del 样式 */
-del {
+.typo del {
   text-decoration: line-through;
 }
 
-address, caption, cite, code, dfn, em, th, var {
+.typo address, .typo caption, .typo cite, .typo code, .typo dfn, .typo em, .typo th, .typo var {
   font-style: normal;
   font-weight: 400;
 }
 
 /* 去掉列表前的标识, li 会继承，大部分网站通常用列表来很多内容，所以应该当去 */
-ul, ol {
+.typo ul, .typo ol {
   list-style: none;
 }
 
 /* 对齐是排版最重要的因素, 别让什么都居中 */
-caption, th {
+.typo caption, .typo th {
   text-align: left;
 }
 
-q:before, q:after {
+.typo q:before, .typo q:after {
   content: '';
 }
 
 /* 统一上标和下标 */
-sub, sup {
+.typo sub, .typo sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
 }
 
-:root sub, :root sup {
+.typo :root sub, .typo :root sup {
   vertical-align: baseline; /* for ie9 and other modern browsers */
 }
 
-sup {
+.typo sup {
   top: -0.5em;
 }
 
-sub {
+.typo sub {
   bottom: -0.25em;
 }
 
 /* 让链接在 hover 状态下显示下划线 */
-a {
+.typo a {
   color: #1abc9c;
 }
 
-a:hover {
+.typo a:hover {
   text-decoration: underline;
 }
 
-.typo a {
+.Typo a {
   border-bottom: 1px solid #1abc9c;
 }
 
-.typo a:hover {
+.Typo a:hover {
   border-bottom-color: #555;
   color: #555;
   text-decoration: none;
 }
 
 /* 默认不显示下划线，保持页面简洁 */
-ins, a {
+.typo ins, .typo a {
   text-decoration: none;
 }
 
@@ -155,12 +162,12 @@ ins, a {
  * 被放弃的是 4，之前一直搞错 http://www.w3.org/TR/html401/appendix/changes.html#idx-deprecated
  * 一篇关于 <u> 标签的很好文章：http://html5doctor.com/u-element/
  */
-u, .typo-u {
+.typo u, .Typo-u {
   text-decoration: underline;
 }
 
 /* 标记，类似于手写的荧光笔的作用 */
-mark {
+.typo mark {
   background: #fffdd1;
   border-bottom: 1px solid #ffedce;
   padding: 2px;
@@ -168,11 +175,11 @@ mark {
 }
 
 /* 代码片断 */
-pre, code, pre tt {
+.typo pre, .typo code, .typo pre tt {
   font-family: Courier, 'Courier New', monospace;
 }
 
-pre {
+.typo pre {
   background: #f8f8f8;
   border: 1px solid #ddd;
   padding: 1em 1.5em;
@@ -181,7 +188,7 @@ pre {
 }
 
 /* 一致化 horizontal rule */
-hr {
+.typo hr {
   border: none;
   border-bottom: 1px solid #cfcfcf;
   margin-bottom: 0.8em;
@@ -189,14 +196,14 @@ hr {
 }
 
 /* 底部印刷体、版本等标记 */
-small, .typo-small,
+.typo small, .Typo-small,
   /* 图片说明 */
-figcaption {
+.typo figcaption {
   font-size: 0.9em;
   color: #888;
 }
 
-strong, b {
+.typo strong,.typo b {
   font-weight: bold;
   color: #000;
 }
